# youtube-converter

./: .gitattributes  .gitignore  README.md  cleanbuild.sh  download-binaries.sh  index.html  package.json  pnpm-lock.yaml  tailwind.config.js
.github/workflows/: release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: verify-binaries.sh  yt-dlp  yt-dlp-macos
src-tauri/capabilities/: main-capability.json
src-tauri/src/: binaries.rs  commands.rs  downloader.rs  main.rs  playlist.rs  settings.rs
src/components/: ItemList.tsx  Navigation.tsx  ProgressBar.tsx  Queue.tsx  Settings.tsx  ThemeToggle.tsx  UrlInput.tsx
src/contexts/: ThemeContext.tsx
src/hooks/: useProgress.ts  useQueue.ts  useSettings.ts
src/pages/: Downloads.tsx  Home.tsx  SettingsPage.tsx
src/store/: playlistStore.ts  queueStore.ts  settingsStore.ts
src/types/: index.ts
